Fix the scaling on mobile

--- a/css/asda.css
+++ b/css/asda.css
@@ -1,5 +1,5 @@
 video {
    width:100%;
-   max-width:500px;
+   max-width:1080px;
    height:auto;
 }
